# liblxi

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  LICENSE  NEWS  README  README.md  configure.ac  meson.build  search_mdns  status.md
.circleci/: config.yml
man/: Makefile.am  lxi_connect.3  lxi_connect.3.in  lxi_disconnect.3  lxi_disconnect.3.in  lxi_discover.3  lxi_discover.3.in  lxi_discover_devices.3  lxi_discover_if.3.in  lxi_get_device_info.3  lxi_init.3  lxi_init.3.in  lxi_receive.3  lxi_receive.3.in  lxi_send.3  lxi_send.3.in  meson.build
src/: Makefile.am  avahi.c  avahi.h  bonjour.c  bonjour.h  cygwin_dnssd.c  cygwin_dnssd.h  error.h  list.c  lxi.c  lxi.h  mdns.c  mdns.h  mdns_lxi.h  meson.build  session.h  tcp.c  tcp.h  vxi11.c  vxi11.h  vxi11core.h  vxi11core.rpcl  vxi11core_clnt.c  vxi11core_svc.c  vxi11core_xdr.c
src/include/: list.h  lxi.h  mdns.h  meson.build  session.h  tcp.h  vxi11.h  vxi11core.h
src/include/lxi/: lxi.h
src/test/: connect.c  scpi.c  search.c
test/: receive-image-data.c  scpi.c  search-mdns.c  search.c
test/vala/: main.vala  meson.build  receive-image-data.vala  scpi.vala  search-mdns.vala  search.vala
test/vala/vapi/: liblxi.vapi
